--- a/deploy/application.yaml
+++ b/deploy/application.yaml
@@ -13,7 +13,7 @@ spec:
     server: https://kubernetes.default.svc
     namespace: myapp
   syncPolicy:
-    snycOptions:
+    syncOptions:
     - CreateNamespace=true
     automated:
       selfHeal: true
