--- a/deploy/application.yaml
+++ b/deploy/application.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/ranakan19/taxi.git
+    repoURL: https://github.com/ranakan19/taxi
     targetRevision: HEAD
     path: deploy
   destination:
